--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f2f2f2;
+    height: 30vh;
+    background-color: #397ec83f;
   }
   
   .title {
