--- a/src/styles/messageFormStyle.css
+++ b/src/styles/messageFormStyle.css
@@ -5,17 +5,17 @@
     width: 50%;
     margin: auto;
     padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    border: 1px solid #ad9e9e;
+    border-radius: 10px;
     background-color: #f2f2f2;
   }
   
   .input {
-    width: 100%;
+    width: 50%;
     margin-bottom: 10px;
     padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 3px;
+    border: 2px solid #4d4a4a;
+    border-radius: 4px;
   }
   
   .button {
@@ -23,6 +23,7 @@
     background-color: #4caf50;
     color: white;
     border: none;
+    border-radius: 5px;
     cursor: pointer;
     margin-top: 10px;
   }
